--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/redlounge"]
 	path = themes/redlounge
-	url = git@github.com:tmaiaroto/hugo-redlounge.git
+	url = https://github.com/tmaiaroto/hugo-redlounge.git
