--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://jirex.netlify.com/"
 languageCode = "en-us"
 title = "jirex's Blog"
 theme = "redlounge"
