--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseURL = "https://jirex.netlify.com/"
 languageCode = "en-us"
 title = "jirex's Blog"
 theme = "redlounge"
+publishDir = "docs"
 
 [params]
 	sidebartitle = "jirex's Blog"
